# imsadooh61829495086737273748-jsjfkfk

./: .dockerignore  .env.aws.example  .env.example  .gitignore  .npmrc  .replit  .vercelignore  AGENTS.md  API.md  AUDIT_REPORT.md  AUDIT_REPORT_FULL.md  AUDNIX_SCALING_COST_REPORT.md  AUDNIX_UI_FIX_IMPLEMENTATION_PLAN.md  AWS_DEPLOYMENT_GUIDE.md  CALENDLY_FREE_PLAN_LIMITATIONS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.ecs  Dockerfile.production  E2E_TEST_REPORT.md  EMAIL-STACK.md  INSTAGRAM_COMMENT_FEATURE_AUDIT.md  MONGODB_ATLAS_IP_WHITELIST_FIX.md  MTA_MIGRATION_PLAN.md  PRICING_PAGE_COPY.md  Procfile  RAILWAY_SERVICES.md  README.md  SECURITY.md  SUBLANDING_PAGES_COPY.md  WARMUP_SERVICE_IMPLEMENTATION_PLAN.md  audit.json  check-import-logs.mjs  cookies.txt  create-tables.mjs  deploy-csv-fix.mjs  deploy-remote.mjs  docker-compose.mta.yml  docker-compose.prod.yml  docker-compose.yml  (+40 more)
.github/: dependabot.yml
.kilo/: kilo.jsonc
.temp/: audnixai-nginx.conf
attached_assets/: ACTIVE_ERRORS_1783981183746.md  Pasted--projectId-prj-XJbgqvZ79W8BTjleNQl3uT9VvAYr-TimeUTC-202_1770175435848.txt  Pasted-1-The-Brand-PDF-Bridge-Critical-The-Issue-While-the-PDF_1770173900674.txt  Pasted-19-37-48-018-Running-build-in-Washington-D-C-USA-East-i_1770173538807.txt  Pasted-PDF-processing-error-TypeError-parse-is-not-a-function-_1770174318610.txt  Pasted-PDF-processing-error-TypeError-parse-is-not-a-function-_1770174345056.txt  Pasted-PDF-processing-error-TypeError-parse-is-not-a-function-_1770174433854.txt
audnix-deliverability-service/: ecosystem.config.js  package-lock.json  package.json
aws/: ECS-DEPLOY-GUIDE.md
client/: index.html
docs/: LEAD_RECOVERY_CRITICALS.md  NGA1_CHECKLIST.md  README.md  ai.md  api.md  architecture.md  auth.md  calendar.md  campaigns.md  deals.md  deliverability.md  deployment.md  developer.md  errors.md  import.md  inbox.md  integrations.md  lead-recovery.md  realtime.md  redis-setup-guide.md  rust.md  ui.md  warmup.md
imsadooh61829495086737273748-jsjfkfk/: .env.example  .gitignore  .railwayignore  .replit  .vercelignore  AUDIT_REPORT_FULL.md  AUDNIX-AI-PROJECT-COMPLETE-CODEBASE-MAP.md  AUDNIX_45_PHASE_PLAN.md  AWS_DEPLOYMENT_GUIDE.md  BACKEND_AUDIT.md  DEPLOY.md  EVALUATION-WILDDUCK-PLAN.md  IMAP-AUDIT-AND-OPTIMIZATION.md  IMPLEMENTATION_PLAN_AUDIT.md  POW-PUSH-SETUP.md  RAILWAY_SERVICES.md  README.md  SECURITY.md  USER_GUIDE.md  audit_utf8.json  check-cols.ts  check-lead-recovery.mjs  config.toml  deploy-sql-fix.mjs  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  fix-admin-whitelist.sql  fix-imports.ps1  fix_wizard.ps1  opencode.json  package-lock.json  package-lock.json.bak  package.json  polyfill-file.cjs  redirect_uris.md  replit.md  schema_report.json  scratch-test-smtp.ts  (+5 more)
k8s/: deployment.yaml  hpa.yaml  imap-worker-keda.yaml
kumomta/: dkim-sign.lua  init.lua  policy.lua  reputation-check.lua  reputation.lua
logs/: .15e2bd1d13432492853890b1cc75a6e6d274b20f-audit.json  .6ce74605c5fc3b4ae85d17226c0ac912475a4922-audit.json  .ba646af0a93c0a54bd6b875d32eab403baffff3c-audit.json  .e762e9ef38e68ad109c42d7b1cb981fb8e33ef0c-audit.json
migrations/: 0001_add_calendar_link.sql  0002_spicy_mandrill.sql  002_audnix_schema.sql  0046_rich_radioactive_man.sql  0048_thick_speed.sql  0049_sloppy_tenebrous.sql  005_voice_minutes_migration.sql  011_create_oauth_accounts.sql  017_add_payment_tracking.sql  019_sync_schema_columns.sql  029_latest_updates.sql  (+15 more)
rust-email-sender/: Cargo.toml  Dockerfile
rust-email-sender/src/: config.rs  dns.rs  mailer.rs  main.rs  queue.rs  scheduler.rs  telemetry.rs
rust-imap-worker/: Cargo.toml  Dockerfile
rust-imap-worker/src/: config.rs  dmarc_ruf.rs  idle_manager.rs  imap_client.rs  mail_parser.rs  mailbox_monitor.rs  main.rs  redis_bridge.rs  seed_monitor.rs
(+1280 files in other folders)
