[package]
name = "audnix-email-sender"
version = "0.1.0"
edition = "2021"
description = "High-performance email sending accelerator for Audnix AI"
authors = ["Audnix AI <hello@audnixai.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
 lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "pool"] }
trust-dns-resolver = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
dashmap = "6"
flume = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
