[package]
name = "audnix-imap-worker"
version = "0.1.0"
edition = "2021"
description = "High-performance IMAP IDLE worker for Audnix AI"
authors = ["Audnix AI <hello@audnixai.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "1"
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
dashmap = "6"
flume = "0.11"
futures = "0.3"
tokio-util = "0.7"
bytes = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
